Adição de foto, e correção da seção contato.

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             <section id="sobre-mim">
                 <h2>Sobre Mim</h2>
                     <div class="sobre-container">
-                        <img src="sua-foto.jpg" alt="Foto de Bruno Barbosa" class="foto-perfil">
+                        <img src="img/bruno.jpg" alt="Foto de Bruno Barbosa" class="foto-perfil">
                             <div class="texto-sobre">
                                 <p>Olá! Meu nome é <strong>Bruno Barbosa</strong>, sou estudante de Sistemas de Informação na PUC Minas e apaixonado por tecnologia. Atualmente estou me especializando em desenvolvimento web com HTML, CSS e futuramente JavaScript. Meu objetivo é me tornar um desenvolvedor web, criando sites modernos e funcionais para empresas e marcas.</p>
                                 <p>Estou em transição de carreira dentro da área de TI, buscando novos desafios que me permitam colocar a mão no código e crescer profissionalmente. Aqui você vai encontrar alguns projetos que estou desenvolvendo como parte dessa jornada.</p>
@@ -53,7 +53,7 @@
 
         <div class="contact-section" id="contato">
             <h3>Contato</h3>
-            <p>Tel:(31) 9 8451-0587<br>E-mail: contato@brunodeveloper@gmail.com<br></p>
+            <p>Tel:(31) 9 8451-0587<br>E-mail: contato.brunodeveloper@gmail.com<br></p>
             <div class="social-icons">
                 <a href="https://github.com/coderBrunobs" target="_blank" class="icon github"><i class="fab fa-github"></i></a>
                 <a href="https://linkedin.com/in/seu-usuario" target="_blank" class="icon linkedin"><i class="fab fa-linkedin"></i></a>
